--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-  <a href="./index.html">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
     <header>
       <nav>
         <ul>
@@ -100,7 +100,7 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tomford.jpg" alt="Tom Ford" width="264" /><br />
+            <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <br />
             <p>Frontend Developer</p>
