--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
-              width="264"
+              width="264">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -106,7 +106,7 @@
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
-              width="264"
+              width="264">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -114,7 +114,7 @@
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
-              width="264"
+              width="264">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
