--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <address>
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="tel:+110001111111">+11(000) 111-11-11</a>
-            </li>
-          </ul>
-        </address>
       </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11(000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -93,7 +93,8 @@
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
-              width="264">
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -106,7 +107,8 @@
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
-              width="264">
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -114,7 +116,8 @@
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
-              width="264">
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
